@@ -8,6 +8,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ProductsService {
@@ -15,11 +16,12 @@ public class ProductsService {
     @Autowired
     private ProductsRepository productsRepository;
 
+    // Método para adicionar um novo produto
     public ProductsDTO addProduct(ProductsDTO productsDTO) {
         Products product = new Products(
                 productsDTO.getProductCode(),
-                productsDTO.getName(),  // Nome do produto
-                productsDTO.getCategory(),  // Categoria do produto
+                productsDTO.getName(),
+                productsDTO.getCategory(),
                 productsDTO.getUnitCost(),
                 productsDTO.getProfitMargin()
         );
@@ -27,32 +29,34 @@ public class ProductsService {
         return new ProductsDTO(
                 product.getId(),
                 product.getProductCode(),
-                product.getName(),  // Retornando nome
-                product.getCategory(),  // Retornando categoria
+                product.getName(),
+                product.getCategory(),
                 product.getUnitCost(),
                 product.getProfitMargin()
         );
     }
 
+    // Método para buscar todos os produtos
     public List<ProductsDTO> getAllProducts() {
         return productsRepository.findAll().stream()
                 .map(product -> new ProductsDTO(
                         product.getId(),
                         product.getProductCode(),
-                        product.getName(),  // Incluindo nome
-                        product.getCategory(),  // Incluindo categoria
+                        product.getName(),
+                        product.getCategory(),
                         product.getUnitCost(),
                         product.getProfitMargin()))
-                .toList();
+                .collect(Collectors.toList()); // Usar Collectors.toList() para compatibilidade com versões anteriores do Java
     }
 
+    // Método para buscar um produto pelo código
     public Optional<ProductsDTO> findProductByCode(String productCode) {
         return productsRepository.findByProductCode(productCode)
                 .map(product -> new ProductsDTO(
                         product.getId(),
                         product.getProductCode(),
-                        product.getName(),  // Incluindo nome
-                        product.getCategory(),  // Incluindo categoria
+                        product.getName(),
+                        product.getCategory(),
                         product.getUnitCost(),
                         product.getProfitMargin()
                 ));
